--- a/savr-app/app.json
+++ b/savr-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Savr",
-    "slug": "savr-app",
+    "slug": "savr",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
