--- a/savr-app/package.json
+++ b/savr-app/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.2.1",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.45.2",
+    "@tanstack/react-query": "^5.52.3",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
