--- a/savr-app/package.json
+++ b/savr-app/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.45.2",
     "@tanstack/react-query": "^5.52.3",
+    "akahu": "^1.15.3",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
