--- a/savr-app/package.json
+++ b/savr-app/package.json
@@ -19,6 +19,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/react-native-skia": "^1.3.11",
     "@supabase/supabase-js": "^2.45.2",
     "@tanstack/react-query": "^5.52.3",
     "akahu": "^1.15.3",
@@ -38,10 +39,12 @@
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
