--- a/savr-app/package.json
+++ b/savr-app/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.2.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "^1.3.11",
     "@supabase/supabase-js": "^2.45.2",
@@ -37,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-pie-chart": "^3.0.2",
