--- a/savr-app/package.json
+++ b/savr-app/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.52.3",
     "akahu": "^1.15.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
