--- a/savr-app/package.json
+++ b/savr-app/package.json
@@ -37,6 +37,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
+    "node-cron": "^3.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -48,6 +49,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "supabase": "^1.200.3",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
