--- a/savr-app/package.json
+++ b/savr-app/package.json
@@ -50,7 +50,9 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "supabase": "^1.200.3",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "expo-image-picker": "~15.0.7",
+    "expo-local-authentication": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
