--- a/savr-app/package.json
+++ b/savr-app/package.json
@@ -29,7 +29,9 @@
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-local-authentication": "~14.0.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
@@ -49,14 +51,13 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "supabase": "^1.200.3",
-    "tailwindcss-react-native": "^1.7.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-local-authentication": "~14.0.1",
-    "react-native-webview": "13.8.6"
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.7.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
